Primitives Shapes - ellipse

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<ul>
 		<li>
 			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a>
+			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a>
 		</li>
 	</ul>
 	<h2>Module 9</h2>
