--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h2>Module 8</h2>
 	<ul>
 		<li>
-			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a>
+			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a><br>
 			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a>
 		</li>
 	</ul>
