Primitives Shapes - line

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<ul>
 		<li>
 			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a><br>
-			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a>
+			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a><br>
+			<a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a>
 		</li>
 	</ul>
 	<h2>Module 9</h2>
