Primitives Shapes - rect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 		<li>
 			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a><br>
 			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a><br>
-			<a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a>
+			<a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a><br>
+			<a href="module08/ex825.html" target="_blank">Ex825 - Primitives Shapes - point</a><br>
+			<a href="module08/ex826.html" target="_blank">Ex826 - Primitives Shapes - rect</a>
 		</li>
 	</ul>
 	<h2>Module 9</h2>
