--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			<a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a><br>
 			<a href="module08/ex825.html" target="_blank">Ex825 - Primitives Shapes - point</a><br>
 			<a href="module08/ex826.html" target="_blank">Ex826 - Primitives Shapes - rect</a><br>
-			<a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a>
+			<a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a><br>
+			<a href="module08/ex828.html" target="_blank">Ex828 - Motion</a>
 		</li>
 	</ul>
 	<h2>Module 9</h2>
