--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 <body>
 	<h2>Module 8</h2>
 	<ul>
-		<li>
-			<a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a><br>
-			<a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a><br>
-			<a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a><br>
-			<a href="module08/ex825.html" target="_blank">Ex825 - Primitives Shapes - point</a><br>
-			<a href="module08/ex826.html" target="_blank">Ex826 - Primitives Shapes - rect</a><br>
-			<a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a><br>
-			<a href="module08/ex828.html" target="_blank">Ex828 - Motion</a>
-		</li>
+		<li><a href="module08/ex812.html" target="_blank">Ex812 - A canvas example</a><br></li>
+		<li><a href="module08/ex823.html" target="_blank">Ex823 - Primitives Shapes - ellipse</a></li>
+		<li><a href="module08/ex824.html" target="_blank">Ex824 - Primitives Shapes - line</a></li>
+		<li><a href="module08/ex825.html" target="_blank">Ex825 - Primitives Shapes - point</a></li>
+		<li><a href="module08/ex826.html" target="_blank">Ex826 - Primitives Shapes - rect</a></li>
+		<li><a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a></li>
+		<li><a href="module08/ex828.html" target="_blank">Ex828 - Motion</a></li>
+		<li><a href="module08/ex832.html" target="_blank">Ex832 - Color Rules</a></li>
 	</ul>
 	<h2>Module 9</h2>
 	<h2>Module 10</h2>
