--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<li><a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a></li>
 		<li><a href="module08/ex828.html" target="_blank">Ex828 - Motion</a></li>
 		<li><a href="module08/ex832.html" target="_blank">Ex832 - Color Rules</a></li>
+		<li><a href="module08/ex833.html" target="_blank">Ex833 - Alpha Value</a></li>
 	</ul>
 	<h2>Module 9</h2>
 	<h2>Module 10</h2>
