mouseX and mouseY

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 		<li><a href="module08/ex833.html" target="_blank">Ex833 - Alpha Value</a></li>
 	</ul>
 	<h2>Module 9</h2>
+	<ul>
+	<li><a href="module09/ex912.html" target="_blank">Ex912 - mouseX and mouseY</a></li>
+	</ul>
+	
 	<h2>Module 10</h2>
 </body>
 
