--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 	</ul>
 	<h2>Module 9</h2>
 	<ul>
-	<li><a href="module09/ex912.html" target="_blank">Ex912 - mouseX and mouseY</a></li>
+		<li><a href="module09/ex912.html" target="_blank">Ex912 - mouseX and mouseY</a></li>
+		<li><a href="module09/example912.html" target="_blank">Ex902 - drawing tool - tracking</a></li>
+		<li><a href="module09/ex913.html" target="_blank">Ex913 - mouseClicked()</a></li>
+		<li><a href="module09/example913.html" target="_blank">Ex903 - drawing tool - marking</a></li>
+		<li><a href="module09/example914.html" target="_blank">Ex904 - mouseIsPressed()</a></li>
+		<li><a href="module09/ex914.html" target="_blank">Ex914 - drawing tool -2color</a></li>
 	</ul>
-	
+
 	<h2>Module 10</h2>
 </body>
 
