--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<li><a href="module08/ex826.html" target="_blank">Ex826 - Primitives Shapes - rect</a></li>
 		<li><a href="module08/ex827.html" target="_blank">Ex827 - Primitives Shapes - triangle</a></li>
 		<li><a href="module08/ex828.html" target="_blank">Ex828 - Motion</a></li>
+		<li><a href="module08/example828.html" target="_blank">Ex829 - Motion2</a></li>
 		<li><a href="module08/ex832.html" target="_blank">Ex832 - Color Rules</a></li>
 		<li><a href="module08/ex833.html" target="_blank">Ex833 - Alpha Value</a></li>
 	</ul>
@@ -29,6 +30,11 @@
 		<li><a href="module09/example913.html" target="_blank">Ex903 - drawing tool - marking</a></li>
 		<li><a href="module09/example914.html" target="_blank">Ex904 - mouseIsPressed()</a></li>
 		<li><a href="module09/ex914.html" target="_blank">Ex914 - drawing tool -2color</a></li>
+		<li><a href="module09/ex921.html" target="_blank">Ex921 - loop and noloop</a></li>
+		<li><a href="module09/example921.html" target="_blank">Ex901 - loop and noloop2</a></li>
+		<li><a href="module09/ex922.html" target="_blank">Ex922 - redraw - size </a></li>
+		<li><a href="module09/example922.html" target="_blank">Ex902 - redraw - motion </a></li>
+		
 	</ul>
 
 	<h2>Module 10</h2>
