--- a/module09/ex922.html
+++ b/module09/ex922.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Motion</title>
+	<title>redraw -size </title>
 
 	<script src="../libraries/p5.js"></script>
 	<script src="../libraries/p5.dom.js"></script>
 	<script src="../libraries/p5.sound.js"></script>
-	<script src="ex828.js"></script>
+	<script src="ex922.js"></script>
 
 	<style>
 		body {
