--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 		<li><a href="module09/example921.html" target="_blank">Ex901 - loop and noloop2</a></li>
 		<li><a href="module09/ex922.html" target="_blank">Ex922 - redraw - size </a></li>
 		<li><a href="module09/example922.html" target="_blank">Ex902 - redraw - motion </a></li>
-		
+		<li><a href="module09/example923.html" target="_blank">Ex902 - drag/draw - click/clear </a></li>
+		<li><a href="module09/ex923.html" target="_blank">Ex923 - click/draw - button/clear </a></li>
 	</ul>
 
 	<h2>Module 10</h2>
