randoms and clock

--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
 	</ul>
 	<h2>Module 9</h2>
 	<ul>
-		<li><a href="module09/ex912.html" target="_blank">Ex912 - mouseX and mouseY</a></li>
-		<li><a href="module09/example912.html" target="_blank">Ex902 - drawing tool - tracking</a></li>
-		<li><a href="module09/ex913.html" target="_blank">Ex913 - mouseClicked()</a></li>
-		<li><a href="module09/example913.html" target="_blank">Ex903 - drawing tool - marking</a></li>
-		<li><a href="module09/example914.html" target="_blank">Ex904 - mouseIsPressed()</a></li>
-		<li><a href="module09/ex914.html" target="_blank">Ex914 - drawing tool -2color</a></li>
-		<li><a href="module09/ex921.html" target="_blank">Ex921 - loop and noloop</a></li>
-		<li><a href="module09/example921.html" target="_blank">Ex901 - loop and noloop2</a></li>
-		<li><a href="module09/ex922.html" target="_blank">Ex922 - redraw - size </a></li>
-		<li><a href="module09/example922.html" target="_blank">Ex902 - redraw - motion </a></li>
-		<li><a href="module09/example923.html" target="_blank">Ex902 - drag/draw - click/clear </a></li>
-		<li><a href="module09/ex923.html" target="_blank">Ex923 - click/draw - button/clear </a></li>
+		<li><a href="module09/ex912.html" target="_blank">Ex9120 - mouseX and mouseY</a></li>
+		<li><a href="module09/example912.html" target="_blank">Ex9121 - drawing tool - tracking</a></li>
+		<li><a href="module09/ex913.html" target="_blank">Ex9130 - mouseClicked()</a></li>
+		<li><a href="module09/example913.html" target="_blank">Ex9131 - drawing tool - marking</a></li>
+		<li><a href="module09/example914.html" target="_blank">Ex9141 - mouseIsPressed()</a></li>
+		<li><a href="module09/ex914.html" target="_blank">Ex9140 - drawing tool -2color</a></li>
+		<li><a href="module09/ex921.html" target="_blank">Ex9210 - loop and noloop</a></li>
+		<li><a href="module09/example921.html" target="_blank">Ex9211 - loop and noloop2</a></li>
+		<li><a href="module09/ex922.html" target="_blank">Ex9220 - redraw - size </a></li>
+		<li><a href="module09/example922.html" target="_blank">Ex9221 - redraw - motion </a></li>
+		<li><a href="module09/example923.html" target="_blank">Ex9231 - drag/draw - click/clear </a></li>
+		<li><a href="module09/ex923.html" target="_blank">Ex9230 - click/draw - button/clear </a></li>
+		<li><a href="module09/example924.html" target="_blank">Ex9241 - translate and rotate </a></li>
+		<li><a href="module09/ex924.html" target="_blank">Ex9240 - clock simulation</a></li>
+		<li><a href="module09/example925.html" target="_blank">Ex9251 - random()</a></li>
+		<li><a href="module09/ex925.html" target="_blank">Ex9250 - random() w/colors</a></li>
+		<li><a href="module09/assignment16sena.html" target="_blank">Ex9009 - clock assignment</a></li>
 	</ul>
 
 	<h2>Module 10</h2>
