--- a/index.html
+++ b/index.html
@@ -42,8 +42,16 @@
 		<li><a href="module09/ex925.html" target="_blank">Ex9250 - random() w/colors</a></li>
 		<li><a href="module09/assignment16sena.html" target="_blank">Ex9009 - clock assignment</a></li>
 	</ul>
-
 	<h2>Module 10</h2>
+	<ul>
+		<li><a href="module10/ex1012.html" target="_blank">Ex1012 - get() and set()</a></li>
+		<li><a href="module10/example1012.html" target="_blank">Ex1012 - get() and set() -reverse</a></li>
+		<li><a href="module10/example1013.html" target="_blank">Ex1013 - pixels array</a></li>
+		<li><a href="module10/ex1013.html" target="_blank">Ex1013 - pixels array - random()</a></li>
+		
+		
+	
+	</ul>
 </body>
 
 </html>
