--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
 		<li><a href="module10/example1012.html" target="_blank">Ex1012 - get() and set() -reverse</a></li>
 		<li><a href="module10/example1013.html" target="_blank">Ex1013 - pixels array</a></li>
 		<li><a href="module10/ex1013.html" target="_blank">Ex1013 - pixels array - random()</a></li>
-		
-		
-	
+		<li><a href="module10/example1021.html" target="_blank">Ex1021 - insert video</a></li>
+		<li><a href="module10/ex1021.html" target="_blank">Ex1021 - insert video - loop</a></li>
+		<li><a href="module10/example1022.html" target="_blank">Ex1022 - play with video</a></li>
+		<li><a href="module10/ex1022.html" target="_blank">Ex1022 - play with video - alt</a></li>
+		<li><a href="module10/example1023.html" target="_blank">Ex1023 - capture()</a></li>
+		<li><a href="module10/ex1023.html" target="_blank">Ex1023 - camera video in canvas</a></li>
+		<li><a href="module10/assignment18sena.html" target="_blank">Ex1009 - capture photo from camera video</a></li>
 	</ul>
 </body>
 
